3tierarch/igw.tf

# Creat internet gateway

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${project_name}-igw}"
  }
}
